--- a/YORK.html
+++ b/YORK.html
@@ -91,9 +91,9 @@ Author URL: http://iWADCommunity.com
                                         <div class="col-sm-2">
                                             <ul class="multi-column-dropdown">
                                                 <h6>Our Services</h6>
-                                                <li><a href="installations.html">Installations</a></li>
+                                                <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
                                                 <li><a href="Maintainance.html">Maintanace</a></li> 
-                                                <li><a href="repairs.html">Repairs</a></li>
+                                                <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
                                                 <li><a href="Ventilation.html">Ventilation</a></li>
                                                 <li><a href="customers.html">Gallery</a></li></ul>
                                         </div>
@@ -115,8 +115,8 @@ Author URL: http://iWADCommunity.com
                                             <div class="col-sm-5">
                                                 <ul class="multi-column-dropdown">
                                                     <h6>Price List</h6>
-                                                    <li><a href="SAMSUNG.html">SAMSUNG</a></li>
-                                                    <li><a href="MIDEA.html">MEDEA</a></li>
+                                                    <li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials South Africa </a></li>
+                                                    <li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials South Africa</a></li>
                                                     <li><a href="YORK.html">YORK</a></li>
                                                     <li><a href="DAIKAN.html">DAIKAN</a></li>
                                                     <li><a href="ALLIANCE.html">ALLIANCE</a></li>
@@ -248,9 +248,9 @@ Author URL: http://iWADCommunity.com
                     <div class="col-md-3 w3_footer_grid">
                         <h3>Quick LInks</h3>
                         <ul class="info"> 
-                            <li><a href="installations.html">Installations</a></li>
-                            <li><a href="Maintainance.html">Maintainace</a></li>
-                            <li><a href="repairs.html">Repairs</a></li>
+                            <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
+                            <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li>
+                            <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
                             <li><a href="Ventilation.html">Ventilation</a></li>
                         
                         </ul>
