--- a/Air Conditioning Maintenance South Africa.html
+++ b/Air Conditioning Maintenance South Africa.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| Maintainace :: IWADINC</title>
+<title> Air-Conditioning and Refridgeration(PTY)LTD|Air Conditioning Maintenance South Africa :: IWADINC</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -92,9 +92,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<div class="col-sm-2">
 										<ul class="multi-column-dropdown">
 											<h6>Our Services</h6>
-											<li><a href="installations.html">Installations</a></li>
+											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
 											<li><a href="Maintainance.html">Maintanace</a></li> 
-											<li><a href="repairs.html">Repairs</a></li>
+											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
 											<li><a href="Ventilation.html">Ventilation</a></li>
 											<li><a href="customers.html">Gallery</a></li></ul>
 									</div>
@@ -116,8 +116,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="col-sm-5">
 											<ul class="multi-column-dropdown">
 												<h6>Price List</h6>
-												<li><a href="SAMSUNG.html">SAMSUNG</a></li>
-												<li><a href="MIDEA.html">MEDEA</a></li>
+												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials South Africa</a></li>
+												<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials South Africa</a></li>
 												<li><a href="YORK.html">YORK</a></li>
 												<li><a href="DAIKAN.html">DAIKAN</a></li>
 												<li><a href="ALLIANCE.html">ALLIANCE</a></li>
@@ -209,9 +209,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-3 w3_footer_grid">
 					<h3>Quick LInks</h3>
 					<ul class="info"> 
-						<li><a href="installations.html">Installations</a></li>
-						<li><a href="Maintainance.html">Maintainace</a></li>
-						<li><a href="repairs.html">Repairs</a></li>
+						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
+						<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li>
+						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
 						<li><a href="Ventilation.html">Ventilation</a></li>
 					
 					</ul>
