--- a/Air Conditioning Ventilation South Africa.html
+++ b/Air Conditioning Ventilation South Africa.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| Ventilation :: IWADINC</title>
+<title> Air-Conditioning and Refridgeration(PTY)LTD| Air Conditioning Ventilation South Africa:: IWADINC</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -95,7 +95,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 												<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
 												<li><a href="Maintainance.html">Maintanace</a></li> 
 												<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-												<li><a href="Ventilation.html">Ventilation</a></li>
+												<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
 												<li><a href="customers.html">Gallery</a></li></ul>
 										</div>
 									</div>
@@ -109,7 +109,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<div class="col-sm-5">
 												<ul class="multi-column-dropdown">
 													<h6>Specials</h6>
-													<li><a href="Specials.html">Our Specials</a></li>
+													<li><a href="Other  Aircon Specials South Africa .html">Our Specials  </a></li>
 													
 												</ul>
 											</div>
@@ -119,8 +119,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 													<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials South Africa</a></li>
 													<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials South Africa</a></li>
 													<li><a href="YORK.html">YORK</a></li>
-													<li><a href="DAIKAN.html">DAIKAN</a></li>
-													<li><a href="ALLIANCE.html">ALLIANCE</a></li>
+													<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon Specials South Africa</a></li>
+													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon Specials South Africa</a></li>
 													<li><a href="Jet-Air.html">JET-AIR</a></li>
 													<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
 											</div>
@@ -156,7 +156,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<div class="col-md-6 w3ls_about_grid_left">
 									<h2>Ventilation</h2>
 									<p> 
-										Ventilation for most Western Cape Homes and Business are becoming a necessary component of health living. 
+										 Ventilation  for most Western Cape Homes and Business are becoming a necessary component of health living. 
 										<m style="color: red;">Electro</m>-Temp Air-Conditioning and Refridgeration (PTY) LTD can design, supply and install a fresh air or extraction system for your home or Business to transform the most hostile environments
 									</p>
 
@@ -204,7 +204,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
 						<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li>
 						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-						<li><a href="Ventilation.html">Ventilation</a></li>
+						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
 					
 					</ul>
 				</div>
