--- a/Jet-Air.html
+++ b/Jet-Air.html
@@ -92,7 +92,7 @@ Author URL: http://iWADCommunity.com
                                                 <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
                                                 <li><a href="Maintainance.html">Maintanace</a></li> 
                                                 <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-                                                <li><a href="Ventilation.html">Ventilation</a></li>
+                                                <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
                                                 <li><a href="customers.html">Gallery</a></li></ul>
                                         </div>
                                     </div>
@@ -106,7 +106,7 @@ Author URL: http://iWADCommunity.com
                                             <div class="col-sm-5">
                                                 <ul class="multi-column-dropdown">
                                                     <h6>Specials</h6>
-                                                    <li><a href="Specials.html">Our Specials</a></li>
+                                                    <li><a href="Other  Aircon Specials South Africa .html">Our Specials</a></li>
                                                     
                                                 </ul>
                                             </div>
@@ -116,8 +116,8 @@ Author URL: http://iWADCommunity.com
                                                     <li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials South Africa </a></li>
                                                     <li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials South Africa</a></li>
                                                     <li><a href="YORK.html">YORK</a></li>
-                                                    <li><a href="DAIKAN.html">DAIKAN</a></li>
-                                                    <li><a href="ALLIANCE.html">ALLIANCE</a></li>
+                                                    <li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon Specials South Africa</a></li>
+                                                    <li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon Specials South Africa</a></li>
                                                     <li><a href="Jet-Air.html">JET-AIR</a></li>
                                                     <li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
                                             </div>
@@ -271,7 +271,7 @@ Author URL: http://iWADCommunity.com
                             <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
                             <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li>
                             <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-                            <li><a href="Ventilation.html">Ventilation</a></li>
+                            <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
                         
                         </ul>
                     </div>
