--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
 											<li><a href="Maintainance.html">Maintanace</a></li> 
 											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-											<li><a href="Ventilation.html">Ventilation</a></li>
+											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
 											<li><a href="customers.html">Gallery</a></li></ul>
 									</div>
 								</div>
@@ -102,13 +102,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</li>
 							<!-- Mega Menu -->
 							<li class="dropdown" >
-								<a href="#" class="dropdown-toggle " data-toggle="dropdown" >Our Specials <b class="caret"></b></a>
+								<a href="#" class="dropdown-toggle " data-toggle="dropdown" >Our Specials  <b class="caret"></b></a>
 								<ul class="dropdown-menu multi-column columns-2">
 									<div class="row">
 										<div class="col-sm-5">
 											<ul class="multi-column-dropdown">
-												<h6>Specials</h6>
-												<li><a href="Specials.html">Our Specials</a></li>
+												<h6> Our  Specials South Africa </h6>
+												<li><a href="Other  Aircon Specials South Africa .html">Our Specials </a></li>
 												
 											</ul>
 										</div>
@@ -118,8 +118,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials South Africa</a></li>
 												<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials South Africa</a></li>
 												<li><a href="YORK.html">YORK</a></li>
-												<li><a href="DAIKAN.html">DAIKAN</a></li>
-												<li><a href="ALLIANCE.html">ALLIANCE</a></li>
+												<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon Specials South Africa</a></li>
+												<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon Specials South Africa</a></li>
 												<li><a href="Jet-Air.html">JET-AIR</a></li>
 												<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
 										</div>
@@ -236,7 +236,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
 						<li><a href="Maintainance.html">Air Conditioning MaintenanceInstallations</a></li>
 						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-						<li><a href="Ventilation.html">Ventilation</a></li>
+						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
 					
 					</ul>
 				</div>
