--- a/Air Conditioning Installations South Africa.html
+++ b/Air Conditioning Installations South Africa.html
@@ -96,7 +96,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<ul class="multi-column-dropdown">
 												<h6>Our Services</h6>
 												<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
-												<li><a href="Maintainance.html">Maintanace</a></li> 
+												<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li> 
 												<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
 												<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
 												<li><a href="customers.html">Gallery</a></li></ul>
@@ -257,7 +257,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h3>Quick LInks</h3>
 					<ul class="info"> 
 						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
-						<li><a href="Air Conditioning MaintenanceInstallations.html">Main</a></li>
+						<li><a href="Air Conditioning MaintenanceInstallations.html">Air Conditioning Maintenance South Africa</a></li>
 						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
 						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
 					
