Changing page name
york page

--- a/Samsung  Aircon Specials South Africa .html
+++ b/Samsung  Aircon Specials South Africa .html
@@ -119,10 +119,10 @@ Author URL: http://iWADCommunity.com
 												<h6>Price List</h6>
 												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials South Africa </a></li>
 												<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials South Africa</a></li>
-												<li><a href="YORK.html">YORK</a></li>
+												<li><a href="York Aircone Specials South Africa.html">York Aircone Specials South Africa</a></li>
 												<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon Specials South Africa</a></li>
 												<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon Specials South Africa</a></li>
-												<li><a href="Jet-Air.html">JET-AIR</a></li>
+												<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon Specials South Africa</a></li>
 												<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
 										</div>
 										
