--- a/Contacts.html
+++ b/Contacts.html
@@ -152,9 +152,9 @@ Author URL: http://iWADCommunity.com
                 <br>
                 <ul>
                     <li><span class="fa fa-phone"></span> CPT: 021 224 0411 </li>
-                    <li><span class="fa fa-mobile-phone"></span> JHB: null</li>
-                    <li><span class="fa fa-envelope"></span> Email: null</li>
-                    <li><span class="fa fa-home"></span> Address: null</li>
+                    <li><span class="fa fa-mobile-phone"></span> JHB: 011 201 4830</li>
+                    <li><span class="fa fa-envelope"></span> Email: info@electro-temp.co.za</li>
+                    <li><span class="fa fa-home"></span> Address: B8 York Place, corner of De jeger street and York Rd, Kraaifontein, Cape Town</li>
                 </ul>
             </div>
         </div>
@@ -164,9 +164,9 @@ Author URL: http://iWADCommunity.com
                 <br>
                 <ul>
                     <li><span class="fa fa-phone"></span> Tel: 021 224 0411</li>
-                    <li><span class="fa fa-mobile-phone"></span> Cel: null</li>
+                    <li><span class="fa fa-mobile-phone"></span> Cel: +27 64 828 2902</li>
                     <li><span class="fa fa-envelope"></span> Email: sales@electro-temp.co.za</li>
-                    <li><span class="fa fa-home"></span> Address: null</li>
+                    <li><span class="fa fa-home"></span> Address: Address: B8 York Place, corner of De jeger street and York Rd, Kraaifontein, Cape Town</li>
                 </ul>
             </div>
         </div>
@@ -178,10 +178,10 @@ Author URL: http://iWADCommunity.com
                 <br>
 
                 <ul>
-                    <li>@KEITH VANSTADIN</li>
+                    <li>Technical Manager: Anold</li>
                     <li><span class="fa fa-phone"></span> Tel: 566 1315 3135</li>
                     <li><span class="fa fa-mobile-phone"></span> Cel:  074 485 8583</li>
-                    <li><span class="fa fa-envelope"></span> Email: null</li>
+                    <li><span class="fa fa-envelope"></span> Email: info@electro-temp.co.za</li>
                     
                 </ul>
             </div>
@@ -192,10 +192,10 @@ Author URL: http://iWADCommunity.com
                 <br>
 
                 <ul>
-                    <li>@KEITH VANSTADIN</li>
+                    <li>Technical Manager: Anold</li>
                     <li><span class="fa fa-phone"></span> Tel: 56613153135</li>
                     <li><span class="fa fa-mobile-phone"></span> Cel: 074 485 8583 </li>
-                    <li><span class="fa fa-envelope"></span> Email: null</li>
+                    <li><span class="fa fa-envelope"></span> Email: info@electro-temp.co.za</li>
                     
                 </ul>
             </div>
