--- a/Alliance Aircon Specials South Africa.html
+++ b/Alliance Aircon Specials South Africa.html
@@ -5,7 +5,7 @@ Author URL: http://iWADCommunity.com
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| Alliance Aircon Specials South Africa :: IWAD.com</title>
+<title> Air-Conditioning and Refridgeration(PTY)LTD| Alliance Aircon Specials South Africa , Western Cape:: IWAD.com</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -89,10 +89,10 @@ Author URL: http://iWADCommunity.com
 									<div class="col-sm-2">
 										<ul class="multi-column-dropdown">
 											<h6>Our Services</h6>
-											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
-											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li> 
-											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
+											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
+											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li> 
+											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
+											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
 											<li><a href="customers.html">Gallery</a></li></ul>
 									</div>
 								</div>
@@ -113,12 +113,12 @@ Author URL: http://iWADCommunity.com
 										<div class="col-sm-5">
 											<ul class="multi-column-dropdown">
 												<h6>Price List</h6>
-												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials South Africa </a></li>
-												<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials South Africa</a></li>
-												<li><a href="York Aircone Specials South Africa.html">York Aircone Specials South Africa</a></li>
-												<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon Specials South Africa</a></li>
-												<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon Specials South Africa</a></li>
-												<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircone Specials South Africa</a></li>
+												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials Western Cape</a></li>
+												<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials Western Cape</a></li>
+												<li><a href="York Aircone Specials South Africa.html">York Aircone Specials Western Cape</a></li>
+												<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon Specials Western Cape</a></li>
+												<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon Specials Western Cape</a></li>
+												<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircone Specials Western Cape</a></li>
 												<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
 										</div>
 										
@@ -248,10 +248,10 @@ Author URL: http://iWADCommunity.com
                     <div class="col-md-3 w3_footer_grid">
                         <h3>Quick LInks</h3>
                         <ul class="info"> 
-                            <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
-                            <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li>
-                            <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-                            <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
+                            <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
+                            <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li>
+                            <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
+                            <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
                         
                         </ul>
                     </div>
