--- a/Midea Aircon Specials South Africa.html
+++ b/Midea Aircon Specials South Africa.html
@@ -5,7 +5,7 @@ Author URL: http://iWADCommunity.com
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title> Air-Conditioning and Refridgeration(PTY)LTD| Midea Aircon Specials South Africa :: IWADINC</title>
+<title> Air-Conditioning and Refridgeration(PTY)LTD| Midea Aircon Specials South Africa , Western Cape:: IWADINC</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -92,10 +92,10 @@ Author URL: http://iWADCommunity.com
                                         <div class="col-sm-2">
                                             <ul class="multi-column-dropdown">
                                                 <h6>Our Services</h6>
-                                                <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
-                                                <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li> 
-                                                <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-                                                <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
+                                                <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
+                                                <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li> 
+                                                <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
+                                                <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
                                                 <li><a href="customers.html">Gallery</a></li></ul>
                                         </div>
                                     </div>
@@ -251,10 +251,10 @@ Author URL: http://iWADCommunity.com
                     <div class="col-md-3 w3_footer_grid">
                         <h3>Quick LInks</h3>
                         <ul class="info"> 
-                            <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
-                            <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li>
-                            <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-                            <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
+                            <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
+                            <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li>
+                            <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
+                            <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
                         
                         </ul>
                     </div>
