--- a/otherPrices.html
+++ b/otherPrices.html
@@ -89,10 +89,10 @@
 									<div class="col-sm-2">
 										<ul class="multi-column-dropdown">
 											<h6>Our Services</h6>
-											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
-											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li> 
-											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
+											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
+											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li> 
+											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
+											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
 											<li><a href="customers.html">Gallery</a></li></ul>
 									</div>
 								</div>
@@ -254,10 +254,10 @@
             <div class="col-md-3 w3_footer_grid">
                 <h3>Quick LInks</h3>
                 <ul class="info"> 
-                    <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations South Africa</a></li>
-                    <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance South Africa</a></li>
-                    <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs South Africa</a></li>
-                    <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation South Africa</a></li>
+                    <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
+                    <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li>
+                    <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
+                    <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
                 
                 </ul>
             </div>
