--- a/Air Conditioning Ventilation South Africa.html
+++ b/Air Conditioning Ventilation South Africa.html
@@ -85,7 +85,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						
 							<!--SecondDropDown-->
 							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<b class="caret"></b></a>
+								<a href="#" class="dropdown-toggle act" data-toggle="dropdown">Services<b class="caret"></b></a>
 								<ul class="dropdown-menu multi-column columns-1">
 									<div class="row">
 									
@@ -103,7 +103,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</li>
 								<!-- Mega Menu -->
 								<li class="dropdown" >
-									<a href="#" class="dropdown-toggle act" data-toggle="dropdown" >Our Specials <b class="caret"></b></a>
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" >Our Specials <b class="caret"></b></a>
 									<ul class="dropdown-menu multi-column columns-2">
 										<div class="row">
 											<div class="col-sm-5">
