--- a/Alliance Aircon Specials South Africa.html
+++ b/Alliance Aircon Specials South Africa.html
@@ -89,10 +89,10 @@ Author URL: http://iWADCommunity.com
 									<div class="col-sm-2">
 										<ul class="multi-column-dropdown">
 											<h6>Our Services</h6>
-											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
-											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li> 
-											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
-											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
+											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
+											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li> 
+											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
+											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
 											<li><a href="customers.html">Gallery</a></li></ul>
 									</div>
 								</div>
@@ -248,10 +248,10 @@ Author URL: http://iWADCommunity.com
                     <div class="col-md-3 w3_footer_grid">
                         <h3>Quick LInks</h3>
                         <ul class="info"> 
-                            <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
-                            <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li>
-                            <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
-                            <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
+                            <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations/a></li>
+                            <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li>
+                            <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
+                            <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
                         
                         </ul>
                     </div>
