--- a/Air Conditioning Ventilation South Africa.html
+++ b/Air Conditioning Ventilation South Africa.html
@@ -92,10 +92,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="col-sm-2">
 											<ul class="multi-column-dropdown">
 												<h6>Our Services</h6>
-												<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
-												<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li> 
-												<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
-												<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
+												<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
+												<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li> 
+												<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
+												<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
 												<li><a href="customers.html">Gallery</a></li></ul>
 										</div>
 									</div>
@@ -116,12 +116,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<div class="col-sm-5">
 												<ul class="multi-column-dropdown">
 													<h6>Price List</h6>
-													<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials Western Cape</a></li>
-													<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials Western Cape</a></li>
-													<li><a href="York Aircone Specials South Africa.html">York Aircone Specials Western Cape</a></li>
-													<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon Specials Western Cape</a></li>
-													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon Specials Western Cape</a></li>
-													<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircone Specials Western Cape</a></li>
+													<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon</a></li>
+													<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon</a></li>
+													<li><a href="York Aircone Specials South Africa.html">York Aircon</a></li>
+													<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon</a></li>
+													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
+													<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
 													<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
 											</div>
 											
@@ -143,7 +143,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- banner -->
 	<div class="BannerVentilation">
 		<div class="container">
-			<h3><m style="color: red;"></m> <span></span></h3>
+		<h3><m style="color: red;">Electro</m>-Temp Air-Conditioning and Refridgeration, <span>Ventilation</span></h3>
+
 		</div>
 	</div>
 
@@ -201,10 +202,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-3 w3_footer_grid">
 					<h3>Quick LInks</h3>
 					<ul class="info"> 
-						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
-						<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li>
-						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
-						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
+						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
+						<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li>
+						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
+						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
 					
 					</ul>
 				</div>
