--- a/Air Conditioning Maintenance South Africa.html
+++ b/Air Conditioning Maintenance South Africa.html
@@ -92,10 +92,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<div class="col-sm-2">
 										<ul class="multi-column-dropdown">
 											<h6>Our Services</h6>
-											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
-											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li> 
-											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
-											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
+											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
+											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li> 
+											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
+											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
 											<li><a href="customers.html">Gallery</a></li></ul>
 									</div>
 								</div>
@@ -143,7 +143,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- banner -->
 	<div class="BannerMaintainance">
 		<div class="container">
-			<h3><m style="color: red;"></m> <span></span></h3>
+		<h3><m style="color: red;">Electro</m>-Temp Air-Conditioning and Refridgeration, <span>Maintainance</span></h3>
+
 		</div>
 	</div>
 	
@@ -209,10 +210,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-3 w3_footer_grid">
 					<h3>Quick LInks</h3>
 					<ul class="info"> 
-						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
-						<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li>
-						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
-						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
+						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
+						<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li>
+						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
+						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
 					
 					</ul>
 				</div>
