Changed a lot of stuff 1- Removed The western part 2- reCoded Banners and reduced pixels

--- a/Air Conditioning Maintenance South Africa.html
+++ b/Air Conditioning Maintenance South Africa.html
@@ -116,14 +116,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="col-sm-5">
 											<ul class="multi-column-dropdown">
 												<h6>Price List</h6>
-													<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon</a></li>
-													<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon</a></li>
-													<li><a href="York Aircone Specials South Africa.html">York Aircon</a></li>
-													<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon</a></li>
-													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
-													<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
-													<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
-											</div>
+												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon</a></li>
+												<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon</a></li>
+												<li><a href="York Aircone Specials South Africa.html">York Aircon</a></li>
+												<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon</a></li>
+												<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
+												<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
+												<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>						</div>
 										
 									</div>
 								</ul>
