--- a/Alliance Aircon Specials South Africa.html
+++ b/Alliance Aircon Specials South Africa.html
@@ -113,14 +113,14 @@ Author URL: http://iWADCommunity.com
 										<div class="col-sm-5">
 											<ul class="multi-column-dropdown">
 												<h6>Price List</h6>
-												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials Western Cape</a></li>
-												<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials Western Cape</a></li>
-												<li><a href="York Aircone Specials South Africa.html">York Aircone Specials Western Cape</a></li>
-												<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon Specials Western Cape</a></li>
-												<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon Specials Western Cape</a></li>
-												<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircone Specials Western Cape</a></li>
-												<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
-										</div>
+												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon</a></li>
+													<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon</a></li>
+													<li><a href="York Aircone Specials South Africa.html">York Aircon</a></li>
+													<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon</a></li>
+													<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
+													<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
+                                                    <li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
+                                                	</div>
 										
 									</div>
 								</ul>
