--- a/Contacts.html
+++ b/Contacts.html
@@ -91,12 +91,12 @@ Author URL: http://iWADCommunity.com
 									<div class="col-sm-2">
 										<ul class="multi-column-dropdown">
 											<h6>Our Services</h6>
-											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
-											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li> 
-											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
-											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
+											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
+											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li> 
+											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
+											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
 											<li><a href="customers.html">Gallery</a></li></ul>
-									</div>
+								</div>
 								</div>
 							</ul>
 						</li>
@@ -115,14 +115,14 @@ Author URL: http://iWADCommunity.com
 										<div class="col-sm-5">
 											<ul class="multi-column-dropdown">
 												<h6>Price List</h6>
-												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon Specials Western Cape</a></li>
-												<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon Specials Western Cape</a></li>
-												<li><a href="York Aircone Specials South Africa.html">York Aircone Specials Western Cape</a></li>
-												<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon Specials Western Cape</a></li>
-												<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon Specials Western Cape</a></li>
-												<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircone Specials Western Cape</a></li>
+												<li><a href="Samsung  Aircon Specials South Africa .html">Samsung  Aircon</a></li>
+												<li><a href="Midea Aircon Specials South Africa.html">Midea Aircon</a></li>
+												<li><a href="York Aircone Specials South Africa.html">York Aircon</a></li>
+												<li><a href="Daikan Aircon Specials South Africa.html">Daikan Aircon</a></li>
+												<li><a href="Alliance Aircon Specials South Africa.html">Alliance Aircon</a></li>
+												<li><a href="Jet-Air Aircone Specials South Africa.html">Jet-Air Aircon</a></li>
 												<li><a href="otherPrices.html">Other<span class="fa fa-plus"></span></a></li></ul>
-										</div>
+													</div>
 										
 									</div>
 								</ul>
@@ -229,10 +229,10 @@ Author URL: http://iWADCommunity.com
 				<div class="col-md-3 w3_footer_grid">
 					<h3>Quick LInks</h3>
 					<ul class="info"> 
-						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations Western Cape</a></li>
-						<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance Western Cape</a></li>
-						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs Western Cape</a></li>
-						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation Western Cape</a></li>
+						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
+						<li><a href="Air Conditioning MaintenanceInstallations.html">Air Conditioning Maintenance</a></li>
+						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
+						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
 					
 					</ul>
 				</div>
