--- a/Contacts.html
+++ b/Contacts.html
@@ -153,7 +153,7 @@ Author URL: http://iWADCommunity.com
                 <ul>
                     <li><span class="fa fa-phone"></span> CPT: 021 224 0411 </li>
                     <li><span class="fa fa-mobile-phone"></span> JHB: 011 201 4830</li>
-                    <li><span class="fa fa-envelope"></span> Email: info@electro-temp.co.za</li>
+                    <li><span class="fa fa-envelope"></span> Email: info@electrotemp.co.za</li>
                     <li><span class="fa fa-home"></span> Address: B8 York Place, corner of De jeger street and York Rd, Kraaifontein, Cape Town</li>
                 </ul>
             </div>
@@ -165,7 +165,7 @@ Author URL: http://iWADCommunity.com
                 <ul>
                     <li><span class="fa fa-phone"></span> Tel: 021 224 0411</li>
                     <li><span class="fa fa-mobile-phone"></span> Cel: +27 64 828 2902</li>
-                    <li><span class="fa fa-envelope"></span> Email: sales@electro-temp.co.za</li>
+                    <li><span class="fa fa-envelope"></span> Email: sales@electrotemp.co.za</li>
                     <li><span class="fa fa-home"></span> Address: Address: B8 York Place, corner of De jeger street and York Rd, Kraaifontein, Cape Town</li>
                 </ul>
             </div>
@@ -181,7 +181,7 @@ Author URL: http://iWADCommunity.com
                     <li>Technical Manager: Anold</li>
                     <li><span class="fa fa-phone"></span> Tel: 566 1315 3135</li>
                     <li><span class="fa fa-mobile-phone"></span> Cel:  074 485 8583</li>
-                    <li><span class="fa fa-envelope"></span> Email: info@electro-temp.co.za</li>
+                    <li><span class="fa fa-envelope"></span> Email: info@electrotemp.co.za</li>
                     
                 </ul>
             </div>
@@ -195,7 +195,7 @@ Author URL: http://iWADCommunity.com
                     <li>Technical Manager: Anold</li>
                     <li><span class="fa fa-phone"></span> Tel: 56613153135</li>
                     <li><span class="fa fa-mobile-phone"></span> Cel: 074 485 8583 </li>
-                    <li><span class="fa fa-envelope"></span> Email: info@electro-temp.co.za</li>
+                    <li><span class="fa fa-envelope"></span> Email: info@electrotemp.co.za</li>
                     
                 </ul>
             </div>
@@ -238,7 +238,7 @@ Author URL: http://iWADCommunity.com
 				</div>
 				<div class="col-md-3 w3_footer_grid">
 					<h3>Contact Us</h3>
-					<form action='https://formspree.io/info@electro-temp.co.za' method="POST">
+					<form action='https://formspree.io/info@electrotemp.co.za' method="POST">
 
 						<div class="blank"><input type="text" name = "Name" class = "input1" placeholder="Name"></div>
 						<br>
