26-10-2020 changes to the site
changing emails

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<li class="number"><span class="fa fa-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:021 244 0411"> Tel (CPT): 021 244 0411</a></li>
 		<li class="number"><span class="fa fa-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:011 201 4830"> Tel (JHB): 011 201 4830</a></li>
 		<li class="number"><span class="fa fa-mobile-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:+27 734858583"> Cell: +27 734858583</a></li>
-		<li class="number"><span class="fa fa-envelope"></span><a href="mailto:info@electro-temp.co.za" style="text-decoration: none; color: whitesmoke;"> Email: info@electrotemp.co.za</a></li>
+		<li class="number"><span class="fa fa-envelope"></span><a href="mailto:info@electrotemp.co.za" style="text-decoration: none; color: whitesmoke;"> Email: info@electrotemp.co.za</a></li>
 		<li class="number"><span class="fa fa-whatsapp"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:+27 64 828 2902"> Whatsapp: +27 64 828 2902</a></li>
 		</ul>
 		</div>
@@ -95,10 +95,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<div class="col-sm-2">
 										<ul class="multi-column-dropdown">
 											<h6>Our Services</h6>
-											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
-											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li> 
-											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
-											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
+											<li><a href="Air Conditioning Installations South Africa.html">Installations</a></li>
+											<li><a href="Air Conditioning Maintenance South Africa.html">Maintenance</a></li> 
+											<li><a href="Air Conditioning repairs South Africa.html">Repairs</a></li>
+											<li><a href="Air Conditioning Ventilation South Africa.html">Ventilation</a></li>
 											<li><a href="customers.html">Gallery</a></li></ul>
 										</div>
 								</div>
@@ -165,7 +165,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p> Here at <span style="color: red;">Electro</span>-Temp Air-conditioning and Refrigeration (Pty) Ltd, we are committed to deliver high quality products and services that constantly satisfies and exceeds our customers expectations in their Air-conditioning and Refrigeration needs.
 						<br>
 						<br>
-						<span style="color: red;">Electro</span>-Temp Air-Conditioning and Refridgeration (PTY) LTD, only supplies, deliver and install <b>Energy Efficiency Air Air-Conditioning</b>, Super quiet units on the neighbourhood and Long Life span units from Manufactures.
+						<span style="color: red;">Electro</span>-Temp Air-Conditioning and Refridgeration (PTY) LTD, only supplies, deliver and install <b>Energy Efficiency Air-Conditioning</b>, Super quiet units on the neighbourhood and Long Life span units from Manufactures.
 					</p>
 					<br>
 					<div class="col-xs-2 w3ls_about_grid_left1">
@@ -238,8 +238,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul class="address">
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i><a style="text-decoration:none;color: whitesmoke;" href="tel:021 244 0411">021 244 0411</a></li>
 						<li><i class="fa fa-mobile-phone" aria-hidden="true"></i><a style="text-decoration:none;color: whitesmoke;" href="tel:+27 734858583">+27 734858583</a></li>
-						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@electro-temp.co.za">info@electrotemp.co.za</a></li>
-						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>Cape Town.</span></li>
+						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@electrotemp.co.za">info@electrotemp.co.za</a></li>
+						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i> B8 York Place, corner of De jeger street and York Rd, Kraaifontein, Cape Town</li>
 
 					</ul>
 				</div>
@@ -254,10 +254,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-3 w3_footer_grid">
 					<h3>Quick LInks</h3>
 					<ul class="info"> 
-						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
-						<li><a href="Air Conditioning MaintenanceInstallations.html">Air Conditioning Maintenance</a></li>
-						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
-						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
+						<li><a href="Air Conditioning Installations South Africa.html">Installations</a></li>
+						<li><a href="Air Conditioning MaintenanceInstallations.html">Maintenance</a></li>
+						<li><a href="Air Conditioning repairs South Africa.html">Repairs</a></li>
+						<li><a href="Air Conditioning Ventilation South Africa.html">Ventilation</a></li>
 					
 					</ul>
 				</div>
