--- a/Air Conditioning repairs South Africa.html
+++ b/Air Conditioning repairs South Africa.html
@@ -54,7 +54,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<li class="number"><span class="fa fa-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:021 244 0411"> Tel (CPT): 021 244 0411</a></li>
 			<li class="number"><span class="fa fa-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:011 201 4830"> Tel (JHB): 011 201 4830</a></li>
 			<li class="number"><span class="fa fa-mobile-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:+27 734858583"> Cell: +27 734858583</a></li>
-			<li class="number"><span class="fa fa-envelope"></span><a href="mailto:info@electro-temp.co.za" style="text-decoration: none; color: whitesmoke;"> Email: info@electrotemp.co.za</a></li>
+			<li class="number"><span class="fa fa-envelope"></span><a href="mailto:info@electrotemp.co.za" style="text-decoration: none; color: whitesmoke;"> Email: info@electrotemp.co.za</a></li>
 			<li class="number"><span class="fa fa-whatsapp"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:+27 64 828 2902"> Whatsapp: +27 64 828 2902</a></li>	</ul>
 			</ul>
 		</div>
@@ -97,10 +97,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<div class="col-sm-2">
 											<ul class="multi-column-dropdown">
 												<h6>Our Services</h6>
-												<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
-												<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li> 
-												<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
-												<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
+												<li><a href="Air Conditioning Installations South Africa.html">Installations</a></li>
+												<li><a href="Air Conditioning Maintenance South Africa.html">Maintenance</a></li> 
+												<li><a href="Air Conditioning repairs South Africa.html">Repairs</a></li>
+												<li><a href="Air Conditioning Ventilation South Africa.html">Ventilation</a></li>
 												<li><a href="customers.html">Gallery</a></li></ul>
 										</div>
 									</div>
@@ -202,7 +202,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</div>
 									<br>
 									<h2 style="padding-bottom: 0.8%;">Request Repair services <m style="color: red;">HERE!</m></h2>
-								<form action='https://formspree.io/info@electro-temp.co.za' method="POST" >
+								<form action='https://formspree.io/info@electrotemp.co.za' method="POST" >
 									<div class="inputBoxw50">
 										<input type="text" class="CompanyName" required = "true" name="Company Name"><div>
 										<span>Company Name</span></div>
@@ -259,8 +259,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul class="address">
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i><a style="text-decoration:none;color: whitesmoke;" href="tel:021 244 0411">021 244 0411</a></li>
 						<li><i class="fa fa-mobile-phone" aria-hidden="true"></i><a style="text-decoration:none;color: whitesmoke;" href="tel:+27 734858583">+27 734858583</a></li>
-						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@electro-temp.co.za">info@electrotemp.co.za</a></li>
-						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>Cape Town.</span></li>
+						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@electrotemp.co.za">info@electrotemp.co.za</a></li>
+						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i> B8 York Place, corner of De jeger street and York Rd, Kraaifontein, Cape Town</span></li>
 
 					</ul>
 				</div>
@@ -275,10 +275,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-3 w3_footer_grid">
 					<h3>Quick LInks</h3>
 					<ul class="info"> 
-						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
-						<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li>
-						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
-						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
+						<li><a href="Air Conditioning Installations South Africa.html">Installations</a></li>
+						<li><a href="Air Conditioning Maintenance South Africa.html">Maintenance</a></li>
+						<li><a href="Air Conditioning repairs South Africa.html">Repairs</a></li>
+						<li><a href="Air Conditioning Ventilation South Africa.html">Ventilation</a></li>
 					
 					</ul>
 				</div>
