--- a/Alliance Aircon Specials South Africa.html
+++ b/Alliance Aircon Specials South Africa.html
@@ -49,7 +49,7 @@ Author URL: http://iWADCommunity.com
             <li class="number"><span class="fa fa-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:0212440411"> Tel (CPT): 021 244 0411</a></li>
             <li class="number"><span class="fa fa-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:0112014830"> Tel (JHB): 011 201 4830</a></li>
             <li class="number"><span class="fa fa-mobile-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:+27 734858583"> Cell: +27 734858583</a></li>
-            <li class="number"><span class="fa fa-envelope"></span><a href="mailto:info@electro-temp.co.za" style="text-decoration: none; color: whitesmoke;"> Email: info@electrotemp.co.za</a></li>
+            <li class="number"><span class="fa fa-envelope"></span><a href="mailto:info@electrotemp.co.za" style="text-decoration: none; color: whitesmoke;"> Email: info@electrotemp.co.za</a></li>
             <li class="number"><span class="fa fa-whatsapp"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:+27648282902"> Whatsapp: +27 64 828 2902</a></li>
         </ul>
 		</div>
@@ -89,10 +89,10 @@ Author URL: http://iWADCommunity.com
 									<div class="col-sm-2">
 										<ul class="multi-column-dropdown">
 											<h6>Our Services</h6>
-											<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
-											<li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li> 
-											<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
-											<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
+											<li><a href="Air Conditioning Installations South Africa.html">Installations</a></li>
+											<li><a href="Air Conditioning Maintenance South Africa.html">Maintenance</a></li> 
+											<li><a href="Air Conditioning repairs South Africa.html">Repairs</a></li>
+											<li><a href="Air Conditioning Ventilation South Africa.html">Ventilation</a></li>
 											<li><a href="customers.html">Gallery</a></li></ul>
 									</div>
 								</div>
@@ -232,7 +232,7 @@ Author URL: http://iWADCommunity.com
                         <ul class="address">
                             <li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i><a style="text-decoration:none;color: whitesmoke;" href="tel:021 244 0411">021 244 0411</a></li>
                             <li><i class="fa fa-mobile-phone" aria-hidden="true"></i><a style="text-decoration:none;color: whitesmoke;" href="tel:+27 734858583">+27 734858583</a></li>
-                            <li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@electro-temp.co.za">info@electrotemp.co.za</a></li>
+                            <li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@electrotemp.co.za">info@electrotemp.co.za</a></li>
                             <li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>Cape Town.</span></li>
     
     </ul>
@@ -248,10 +248,10 @@ Author URL: http://iWADCommunity.com
                     <div class="col-md-3 w3_footer_grid">
                         <h3>Quick LInks</h3>
                         <ul class="info"> 
-                            <li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations/a></li>
-                            <li><a href="Air Conditioning Maintenance South Africa.html">Air Conditioning Maintenance</a></li>
-                            <li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
-                            <li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
+                            <li><a href="Air Conditioning Installations South Africa.html">Installations/a></li>
+                            <li><a href="Air Conditioning Maintenance South Africa.html">Maintenance</a></li>
+                            <li><a href="Air Conditioning repairs South Africa.html">Repairs</a></li>
+                            <li><a href="Air Conditioning Ventilation South Africa.html">Ventilation</a></li>
                         
                         </ul>
                     </div>
