--- a/Air Conditioning Installations South Africa.html
+++ b/Air Conditioning Installations South Africa.html
@@ -8,6 +8,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 <head>
 <title> Air-Conditioning and Refridgeration(PTY)LTD| Air Conditioning repairs South Africa , Western Cape :: IWADINC</title>
+<!-- Website icon -->
+<link rel="shortcut icon" type="image/png" href="images/favcon1.png">
+<!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
