--- a/Jet-Air Aircone Specials South Africa.html
+++ b/Jet-Air Aircone Specials South Africa.html
@@ -6,6 +6,9 @@ Author URL: http://iWADCommunity.com
 <html lang="en">
 <head>
 <title> Air-Conditioning and Refridgeration(PTY)LTD| Jet-Air Aircone Specials South Africa , Western Cape :: IWADINC</title>
+<!-- Website icon -->
+<link rel="shortcut icon" type="image/png" href="images/favcon1.png">
+<!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
