--- a/about.html
+++ b/about.html
@@ -9,6 +9,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 <head>
 <title> Air-Conditioning and Refridgeration(PTY)LTD| About :: IWAD.com</title>
+<!-- Website icon -->
+<link rel="shortcut icon" type="image/png" href="images/favcon1.png">
+<!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
