--- a/otherPrices.html
+++ b/otherPrices.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <title> Air-Conditioning and Refridgeration(PTY)LTD| Prices :: IWADINC</title>
+<!-- Website icon -->
+<link rel="shortcut icon" type="image/png" href="images/favcon1.png">
+<!-- Website icon -->
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
